# sticksandstones

./: .gitignore  CMakeLists.txt  README.md
res/: emmenterror.aseprite  mole.ase  rooms.data
src/: headers.h  helpers.cpp  helpers.h  main.cpp
src/game/: Builders.cpp  Builders.h  Game.cpp  Game.h  IEventHandler.cpp  IEventHandler.h  Tilemap.cpp  Tilemap.h
src/game/entity/: CollidableEntity.cpp  CollidableEntity.h  ControlledPhysicsEntity.cpp  ControlledPhysicsEntity.h  Entity.cpp  Entity.h  Entity2D.cpp  Entity2D.h  HealthController.cpp  HealthController.h  PhysicalObjectController.cpp  PhysicalObjectController.h  PhysicsEntity.cpp  PhysicsEntity.h  SpriteEntity.cpp  SpriteEntity.h  TickingEntity.cpp  TickingEntity.h
src/game/item/: ItemData.cpp  ItemData.h
src/game/level/: Interactible.cpp  Interactible.h  Interactor.cpp  Interactor.h  LevelGenerator.cpp  LevelGenerator.h  Room.cpp  Room.h
src/game/player/: PlayerController.cpp  PlayerController.h  PlayerUI.cpp  PlayerUI.h
src/game/projectile/: Projectile.cpp  Projectile.h
